--- a/site/style.css
+++ b/site/style.css
@@ -7,35 +7,43 @@
 
 
 	
-	h1{display: -webkit-flex;
-  display: flex;
+	h1{
   font-size: 30px;
-  margin-left: 65px;
+  text-align: center;
 		border: 10px;
 		border-color: green;
 	color: red;
-  text-shadow: 2px 2px 4px blue;}
+  text-shadow: 2px 2px 4px blue;
+}
 		h2{
+			margin-top: 400px;
+			text-align: center;
 			margin-left: 65px;
 			color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 		}
 		h3{
+			text-align: center;
 			margin-left: 65px;
+			margin-top: 20px;
 			color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 		}
 	a{
-		margin-left: 130px;
+		align-self: center;
+		border-radius: 20px;
+		margin-left: 48%;
+		
 	}
 	
 
 footer {
-margin-top: 400px;
+margin-top: 20px;
  text-shadow: 1px 1px 2px black, 0 0 25px green, 0 0 5px red;
   padding: 10px;
   text-align: center;
-  color: white;}
+  color: white;
+}
   p{
   	margin: 30px;
 
