--- a/site/style.css
+++ b/site/style.css
@@ -21,7 +21,7 @@ img {
   border-radius: 20px;
 }
 		h2{
-			font: italic bold 32px/50px Georgia, serif;
+			font: italic bold 22px/40px Georgia, serif;
 			margin-top: 10px;
 			text-align: center;
 			
@@ -37,9 +37,9 @@ img {
 		}
 		
 	a{
-		align-self: center;
+		align-content: center;
 		border-radius: 20px;
-		margin-left: 47%;
+		margin-left: 45%;
 		
 	}
 	
