--- a/site/style.css
+++ b/site/style.css
@@ -8,7 +8,7 @@
 
 	
 	h1{
-  
+  color: SlateBlue;
 		;
   
 
@@ -19,9 +19,10 @@ img {
   margin-right: auto;
   border: 5px solid #555;
   border-radius: 20px;
+  box-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;
 }
 		h2{
-			font: italic bold 22px/40px Georgia, serif;
+			font:  bold 22px/40px Georgia, serif;
 			margin-top: 10px;
 			text-align: center;
 			
@@ -39,7 +40,7 @@ img {
 	a{
 		align-content: center;
 		border-radius: 20px;
-		margin-left: 45%;
+		margin-left: 40%;
 		
 	}
 	
@@ -62,14 +63,14 @@ margin-top: 20px;
   font-style: oblique;
   color: white;
   text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -webkit-animation: glow 0.5s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 0.5s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px red, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    text-shadow: 0 0 10px yellow, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
   
   to {
