--- a/site/style.css
+++ b/site/style.css
@@ -26,7 +26,7 @@ img {
 			margin-top: 10px;
 			text-align: center;
 			
-			color: DodgerBlue;
+			color: Hotpink;
   text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;
 		}
 		h3{
@@ -58,14 +58,14 @@ margin-top: 20px;
   }
   .glow {
   	color:  green;
-  	text-shadow: 2px 2px 4px blue;
+  	text-shadow: 2px 2px 4px black;
   font-size: 30px;
   font-style: oblique;
   color: white;
   text-align: center;
-  -webkit-animation: glow 0.5s ease-in-out infinite alternate;
+  -webkit-animation: glow 1.5s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 0.5s ease-in-out infinite alternate;
+  animation: glow 1.5s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes glow {
